{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 33,
  "lineage": "1b3ad803-5215-5de2-d70b-8ddee4eb51d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dpt12-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0373367514735ced9",
            "arn": "arn:aws:ec2:us-east-1:337636137060:elastic-ip/eipalloc-0373367514735ced9",
            "domain": "vpc",
            "id": "eipalloc-0373367514735ced9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-45-28-173.compute-1.amazonaws.com",
            "public_ip": "52.45.28.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpt12-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:internet-gateway/igw-09c30e6582b66cc5e",
            "id": "igw-09c30e6582b66cc5e",
            "owner_id": "337636137060",
            "tags": {
              "name": "dpt12-internet gateway"
            },
            "tags_all": {
              "name": "dpt12-internet gateway"
            },
            "vpc_id": "vpc-0a70b29767d00c8ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dpt12-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0373367514735ced9",
            "association_id": "eipassoc-0aa793daa1d7de5b1",
            "connectivity_type": "public",
            "id": "nat-088d7b227d49abd22",
            "network_interface_id": "eni-00aa9b45c404385c2",
            "private_ip": "192.168.1.108",
            "public_ip": "52.45.28.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045a61e19e3da791c",
            "tags": {
              "name": "dpt12 NAT Gateway"
            },
            "tags_all": {
              "name": "dpt12 NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-062ddb48afd21af44",
            "id": "rtb-062ddb48afd21af44",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-088d7b227d49abd22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private RT"
            },
            "tags_all": {
              "name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70b29767d00c8ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-05eb0d6f15a8f6c3e",
            "id": "rtb-05eb0d6f15a8f6c3e",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c30e6582b66cc5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public RT"
            },
            "tags_all": {
              "name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70b29767d00c8ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d39161c9a4b8520",
            "route_table_id": "rtb-062ddb48afd21af44",
            "subnet_id": "subnet-09b73827801556685"
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0446992d2f646d214",
            "route_table_id": "rtb-05eb0d6f15a8f6c3e",
            "subnet_id": "subnet-045a61e19e3da791c"
          },
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-09b73827801556685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b73827801556685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private-subnet"
            },
            "tags_all": {
              "name": "private-subnet"
            },
            "vpc_id": "vpc-0a70b29767d00c8ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-045a61e19e3da791c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045a61e19e3da791c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public-subnet"
            },
            "tags_all": {
              "name": "public-subnet"
            },
            "vpc_id": "vpc-0a70b29767d00c8ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpt12-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:vpc/vpc-0a70b29767d00c8ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08d460b623a72a5e1",
            "default_route_table_id": "rtb-08cd69be4be848bdf",
            "default_security_group_id": "sg-05d7d61b75c272140",
            "dhcp_options_id": "dopt-4638863c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a70b29767d00c8ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08cd69be4be848bdf",
            "owner_id": "337636137060",
            "tags": {
              "name": "dpt12-vpc"
            },
            "tags_all": {
              "name": "dpt12-vpc"
            }
          }
        }
      ]
    }
  ]
}